--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -99,12 +99,17 @@ body {
 }
 
 .quote-container{
-    margin-top:70px
+    margin: 70px auto 0;
+    font-style: italic;
+    max-width: 60vw;
 }
 
-.quote {
-    font-style: italic;
-    margin: 20px 0;
+.quote-text {
+    margin-bottom: 0;
+}
+
+.quote-author {
+    margin-top: 0;
 }
 
 .todo {
